# Dise-no-de-un-sistema-hardware-in-the-loop-para-un-p-endulo-invertido-sobre-un-riel

./: Dise˜no de un sistema hardware in the loop para un p´endulo invertido sobre un riel  README.md
microros_ws/install/: local_setup.sh  setup.sh
microros_ws/install/action_msgs/share/action_msgs/: local_setup.sh  package.sh
microros_ws/install/actionlib_msgs/share/actionlib_msgs/: local_setup.sh  package.sh
microros_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
microros_ws/install/microxrcedds_client/lib/: libmicroxrcedds_client.so.2.4.2
microros_ws/log/: latest_build
microros_ws/src/uros/micro_ros_utilities/: CHANGELOG.rst
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/modelo_robot/share/modelo_robot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/modelo_robot/share/modelo_robot/launch/: display.launch.py  robot_simulation_launch.py  world.launch.py
ros2_ws/install/modelo_robot/share/modelo_robot/urdf/: final.urdf  mimundo.sdf
ros2_ws/log/: latest_build
ros2_ws/src/Codigo de arduino/: elbueno.ino
ros2_ws/src/Piezas solid/: Base fija.SLDPRT  Cilinfro guia.SLDPRT  Eje poleas.SLDPRT  Furuta 4 piezas.SLDASM  P-movil.SLDPRT  Pendulo.SLDASM  Pendulo.SLDPRT  Placa extremos.SLDPRT  Placa motriz.SLDPRT  Placa polea libre.SLDPRT  PoLoLu 1 (1).SLDPRT  Polea libre.SLDPRT  Polea y motor.SLDPRT  carro movil.SLDPRT  ensamble Pendulo.SLDASM  ensamble base.SLDASM  ensamble movil.SLDASM  masa pendulo furuta.SLDPRT  riel extruido.SLDPRT
ros2_ws/src/modelo_robot/: CMakeLists.txt  setup.py
ros2_ws/src/modelo_robot/meshes/: base_link.STL  masa_Link.STL  movil_Link.STL  pendulo_Link.STL
ros2_ws/src/modelo_robot/src/: control_gazebo_node.py
ros2_ws/src/modelo_robot/urdf/: final.sdf
ros2_ws/src/planos furuta/: Cilindro guia.SLDDRW  Eje poleas.SLDDRW  P-movil.SLDDRW  Pendulo.SLDDRW  Placa extremos.SLDDRW  Placa motriz.SLDDRW  Plano riel extruido.SLDDRW  Planos Placa polea libre.SLDDRW  PoLoLu.SLDDRW  Polea libre.SLDDRW  masa pendulo furuta.SLDDRW  ~$Placa extremos.SLDDRW
(+101 files in other folders)
