<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modelo_robot</name>
  <version>0.0.0</version>
  <description>This package contains the URDF model and configuration for a mobile robot with a pendulum.</description>
  <maintainer email="alexmireles1234567@gmail.com">nava</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>ros_gz_sim</build_depend>
  <exec_depend>ros_gz_sim</exec_depend>


  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
